--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -2,6 +2,7 @@
 	<h1>Wagon Hunt</h1>
 	<p>Find the best tech products</p>
 	<p>A lot of new products</p>
+	<p><%= link_to "All Products", products_path , class:"btn btn-success" %></p>
 
 	<p><%= @today %></p>
 </div>
