--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -1,8 +1,12 @@
-<div class="container text-center">
-	<h1>Products</h1>
+<div class="container ">
+	<h1 class="text-center">Products</h1>
+	<p><%= link_to "Revenir à l'accueil", root_path, class:"btn btn-primary" %></p>
+	<p><%= link_to "Ajouter un produit", new_product_path, class:"btn btn-success" %></p>
 	<ul>
 		<% @products.each do |product| %>
-		<li> <%= product.name %> (<%= product.url %>)</li>
+		<li><%= link_to product.name, product_path(product) %> // (<%= product.url %>) </li>
+			
+		
 		<% end %>
 	</ul>
 </div>
