--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -2,4 +2,5 @@
 	<h1>Le détails d'un produit</h1>
 	<h2><%= @product.name %></h2>
 	<h3>Url : <%= @product.url %></h3>
+	<p><%= link_to "Retour aux produits", products_path, class:"btn btn-primary" %></p>
 </div>
