--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -2,5 +2,11 @@
 	<h1>Le détails d'un produit</h1>
 	<h2><%= @product.name %></h2>
 	<h3>Url : <%= @product.url %></h3>
-	<p><%= link_to "Retour aux produits", products_path, class:"btn btn-primary" %></p>
+
+	<p>
+	<%= link_to "Edit", edit_product_path(@product) , class: "btn btn-warning"%>
+	<%= link_to "Delete", product_path(@product), method: :delete , class: "btn btn-danger"%>
+	<%= link_to "Retour aux produits", products_path, class:"btn btn-primary" %>
+		
+	</p>
 </div>
