--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -1,14 +1,47 @@
 <div class="container ">
-	<h1 class="text-center">Products</h1>
-	<p><%= link_to "Revenir à l'accueil", root_path, class:"btn btn-primary" %></p>
-	<p><%= link_to "Ajouter un produit", new_product_path, class:"btn btn-success" %></p>
-	<ul>
+
+	<div class="row">
+		<div class="col-xs-12 col-sm-10 col-sm-offset-1">
+			<h1 class="text-center">Products</h1>
+
+
 		<% @products.each do |product| %>
-		<li><%= link_to product.name, product_path(product) %> // (<%= product.url %>) // 
 			
-		</li>
-			
-		
+			<div class="product">
+			  <div class='product-upvote'>
+			    <div class="product-arrow"></div>
+			    <div class='product-count'>0</div>
+			  </div>
+			  <img src="http://unsplash.it/300/200" alt="kudoz" class="product-image hidden-xs">
+			  <div class='product-body'>
+			    <h3><%= product.name %></h3>
+			    <p><%= product.tagline %></p>
+			  </div>
+			  <ul class="list-inline product-controls product-controls-hidden hidden-sm hidden-xs">
+			    <li><%= link_to  product_path(product) do %>
+					<i class="fa fa-eye"></i>
+			     	<% end %>
+			    </li>
+			    <li><%= link_to  edit_product_path(product) do %>
+					<i class="fa fa-pencil"></i>
+			     	<% end %>
+			    </li>
+			    <li><%= link_to  product_path(product), method: :delete do %>
+					<i class="fa fa-trash"></i>
+			     	<% end %>
+			    </li>
+
+			  </ul>
+			</div>
+
 		<% end %>
-	</ul>
+
+			
+
+
+		</div>
+	</div>
+	
+
+	
 </div>
