--- a/app/views/products/new.html.erb
+++ b/app/views/products/new.html.erb
@@ -5,12 +5,7 @@
 
 
 
-			<%= simple_form_for @product do |f| %>
-				<%= f.input :name , placeholder: "Kudoz", label: "Which product ?"  %>
-				<%= f.input :tagline  , placeholder: "Tinder for jobs", label: "Which tagline ?"%>
-				<%= f.input :url  , placeholder: "http://kudoz.co", label: "Which URL ?"%>
-				<%= f.button :submit, "Ajouter" , class: "btn btn-primary"%>
-			<% end %>
+			<%= render "form" %>
 				
 
 
